--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@dfinity/auth-client": "^2.4.1",
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "sweetalert2": "^11.22.2"
   }
 }
